--- a/research/基于远程监督的关系抽取研究现状/index.html
+++ b/research/基于远程监督的关系抽取研究现状/index.html
@@ -387,7 +387,7 @@
             script.async = true;
             script.crossOrigin = 'anonymous';
             script.setAttribute('repo', 'tmliang\/blog_comments');
-            script.setAttribute('issue-term', 'pathname');
+            script.setAttribute('issue-term', 'url');
             const userPrefers = localStorage.getItem('theme');
         const darkModeMediaQuery = window.matchMedia('(prefers-color-scheme: dark)');
         const lightModeMediaQuery = window.matchMedia('(prefers-color-scheme: light)');
