--- a/course/index.html
+++ b/course/index.html
@@ -60,7 +60,7 @@
 
     <meta name="author" content="tmliang" />
     <meta name="description" content="一个分享生活与科研的个人博客" />
-    <meta name="keywords" content=", course, research" />
+    <meta name="keywords" content="关系抽取, course, research" />
     
     <link rel="shortcut icon" type="image/ico" href="/favicon.ico" />
     <link rel="mask-icon" href="/icons/safari-pinned-tab.svg" color="#2a6df4" />
@@ -92,7 +92,7 @@
         "url": "https://tmliang.github.io/course/",
         "name": "Course",
         "description": "一个分享生活与科研的个人博客",
-        "keywords": ", course, research",
+        "keywords": "关系抽取, course, research",
         "image": "https://tmliang.github.io/icons/apple-touch-icon.png",
         "license": "[CC BY-NC-SA 4.0](https://creativecommons.org/licenses/by-nc-sa/4.0/deed.zh)",
         "publisher": {
